--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,140 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-width: 480px;
+  text-shadow: 1px 1px black;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+
+  opacity: 0.8;
+}
+
+img.archImg {
+  border-radius: 16px;
+}
+
+img.archImgLib {
+  border-radius: 22px;
+}
+
+.card {
+  width: 18rem;
+}
+
+i {
+  cursor: pointer;
+}
+
+div.mylogo {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 17;
+  margin-bottom: 10px;
+  padding: 5px 10px 10px;
+  background-color: #252525;
+  border: 4px solid #444444;
+  border-right: 0;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+div.mylogo strong {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.greeting {
+  max-width: 750px;
+  background-color: rgba(66, 66, 66, 0.8);
+  border-radius: 25px 10px 10px;
+}
+
+.infobox {
+  max-width: 825px;
+  background-color: rgba(66, 66, 66, 0.9);
+  border-radius: 10px 25px;
+}
+
+button.rdbutton {
+  user-select: none;
+  font-size: 30px;
+  font-weight: bold;
+  min-width: 80px;
+  width: 85px;
+  padding: 10px 30px;
+  margin: 0 3px 3px 0;
+  border-radius: 10px;
+}
+
+div.rdgrid {
+  padding: 25px;
+  max-width: 370px;
+  background-color: rgba(66, 66, 66, 0.7);
+  border-radius: 5px;
+}
+
+.about {
+  padding: 15px;
+  background-color: rgba(66, 66, 66, 0.7);
+  border-radius: 5px;
+  min-width: 200px;
+  height: 80vh;
+  min-height: 300px;
+}
+
+.intro {
+  overflow-y: scroll;
+}
+
+.portrait {
+  text-align: center;
+}
+
+.portrait img {
+  max-height: 100%;
+}
+
+.screen {
+  border-radius: 5px;
+  background-color: rgba(245, 245, 245, 0.9);
+}
+.navbar {
+  background-color: rgba(66, 66, 66, 0.7);
+}
+
+.tools {
+  background-color: rgba(66, 66, 66, 0.7);
+  border-radius: 15px;
+}
+.tools:hover {
+  background-color: rgba(66, 66, 66, 0.9);
+  border: 1px solid white;
+}
+
+.table {
+  background-color: rgba(66, 66, 66, 0.8);
+  border-radius: 15px;
 }
