--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,14 @@ div.mylogo strong {
   border-radius: 10px 25px;
 }
 
+.profileimg {
+  width: 25%;
+  float: right;
+  margin: 5px;
+  border: 3px solid #444444;
+  border-radius: 10px;
+}
+
 button.rdbutton {
   user-select: none;
   font-size: 30px;
@@ -85,6 +93,7 @@ div.rdgrid {
 }
 
 .about {
+  font-size: 1.4em;
   padding: 15px;
   background-color: rgba(66, 66, 66, 0.7);
   border-radius: 5px;
@@ -95,14 +104,6 @@ div.rdgrid {
 
 .intro {
   overflow-y: scroll;
-}
-
-.portrait {
-  text-align: center;
-}
-
-.portrait img {
-  max-height: 100%;
 }
 
 .screen {
